[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/item.png" type="Texture" id=1]
[ext_resource path="res://hud/itemBg.png" type="Texture" id=2]
[ext_resource path="res://hud/hud.gd" type="Script" id=3]
[ext_resource path="res://asset/fonts/ARIAL.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="hud" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 25.0
margin_right = -30.0
margin_bottom = -25.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
item_wait_time = 3

[node name="VSplitContainer" type="VBoxContainer" parent="."]
margin_right = 1220.0
margin_bottom = 670.0

[node name="inventory" type="HBoxContainer" parent="VSplitContainer"]
margin_right = 1220.0
margin_bottom = 64.0
custom_constants/separation = 10

[node name="item1" type="TextureProgress" parent="VSplitContainer/inventory"]
margin_right = 64.0
margin_bottom = 64.0
max_value = 3.0
value = 3.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="item2" type="TextureProgress" parent="VSplitContainer/inventory"]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
max_value = 3.0
value = 3.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="item3" type="TextureProgress" parent="VSplitContainer/inventory"]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
max_value = 3.0
value = 3.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="item4" type="TextureProgress" parent="VSplitContainer/inventory"]
margin_left = 222.0
margin_right = 286.0
margin_bottom = 64.0
max_value = 3.0
value = 3.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="debug" type="Label" parent="."]
margin_top = 317.0
margin_right = 1220.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout_item"]
